--- a/website.html
+++ b/website.html
@@ -2,6 +2,8 @@
 <p id="status">State: unknown</p>
 
 <script>
+let ws;
+
 async function toggleState() {
     try {
         console.log('Sending toggle request...');
@@ -12,7 +14,6 @@ async function toggleState() {
         } else {
             console.error('Toggle state request failed');
         }
-        fetchState(); // Refresh state after toggling
     } catch (error) {
         console.error('Error in toggleState:', error);
     }
@@ -30,5 +31,29 @@ async function fetchState() {
     }
 }
 
+// Function to establish WebSocket connection
+function connectWebSocket() {
+    ws = new WebSocket("ws://localhost:3000/ws");
+
+    ws.onopen = () => {
+        console.log("WebSocket connected.");
+    };
+
+    ws.onmessage = (event) => {
+        console.log("WebSocket message received:", event.data);
+        document.getElementById("status").innerText = "State: " + event.data;
+    };
+
+    ws.onclose = () => {
+        console.log("WebSocket disconnected. Reconnecting in 3 seconds...");
+        setTimeout(connectWebSocket, 3000);
+    };
+
+    ws.onerror = (error) => {
+        console.error("WebSocket error:", error);
+    };
+}
+
 fetchState(); // Load initial state
+connectWebSocket(); // Start WebSocket connection
 </script>
