--- a/website.html
+++ b/website.html
@@ -7,7 +7,7 @@ let ws;
 async function toggleState() {
     try {
         console.log('Sending toggle request...');
-        const response = await fetch("http://localhost:3000/toggle-state", { method: "POST" });
+        const response = await fetch("http://localhost:3000/toggle-state", { method: "POST" },  {body: JSON.stringify({})});
 
         if (response.ok) {
             console.log('Toggle state request successful');
