--- a/website.html
+++ b/website.html
@@ -7,7 +7,13 @@ let ws;
 async function toggleState() {
     try {
         console.log('Sending toggle request...');
-        const response = await fetch("http://localhost:3000/toggle-state", { method: "POST" },  {body: JSON.stringify({})});
+        const response = await fetch("http://localhost:3000/toggle-state", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({}) // ✅ Correct placement inside the same object
+        });
 
         if (response.ok) {
             console.log('Toggle state request successful');
